<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/driverId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/four"
        android:layout_marginTop="@dimen/four"
        android:hint="@string/driver_id" />

    <EditText
        android:id="@+id/busNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/four"
        android:layout_marginTop="@dimen/four"
        android:hint="@string/bus_number" />

    <Spinner
        android:id="@+id/busSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/four"
        android:layout_marginTop="@dimen/four"
        android:entries="@array/stops"
        android:hint="@string/bus_source" />

    <ImageButton
        android:id="@+id/buttonSwap"
        android:src="@drawable/ic_swap"
        android:background="@null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Spinner
        android:id="@+id/busDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/four"
        android:layout_marginTop="@dimen/four"
        android:entries="@array/stops"
        android:hint="@string/bus_destination" />
    <Button
        android:id="@+id/buttonStart"
        android:onClick="startTransmitting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_start"/>
</LinearLayout>
